@@ -1,3 +1,8 @@
+Tue May  2 15:00:00 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/gobject/deftype.c: added test code from Behdad Esfahbod, 
+	see #337128.
+
 Tue May  2 14:18:25 2006  Tim Janik  <timj@gtk.org>
 
 	* glib/goption.c (g_option_context_parse): fixed leak in short
